--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="qrcode">
-        <img src="https://github.com/BnStaley/FEM_QR_Code_Challenge/blob/main/image-qr-code.png" alt="">
+        <img src="./image-qr-code.png" alt="">
         <div class="qrtext">
             <h1 class="qrtitle">Improve your front-end skills by building projects</h1>
             <p class="qr_describe">Scan the QR code to visit Frontend Mentor and take your coding skills to the next
